--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-helmet": "^5.2.0",
+    "react-pose": "4.0.7",
     "styled-components": "^4.0.2"
   },
   "devDependencies": {
