--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "url": "https://github.com/GiuMagnani/giu-magnani-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^0.20.3",
-    "@mdx-js/tag": "^0.20.3",
     "babel-plugin-styled-components": "^1.8.0",
     "dotenv": "^6.0.0",
     "gatsby": "^2.0.118",
@@ -25,7 +23,9 @@
     "gatsby-plugin-sitemap": "^2.0.1",
     "gatsby-plugin-styled-components": "^3.0.0",
     "gatsby-plugin-typography": "^2.2.7",
+    "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.9",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^2.0.6",
     "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-remark-responsive-iframe": "^2.0.9",
