--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gatsby-mdx": "^0.4.2",
     "gatsby-plugin-feed": "^2.0.13",
     "gatsby-plugin-google-analytics": "^2.0.13",
+    "gatsby-plugin-google-tagmanager": "^2.0.10",
+    "gatsby-plugin-gtag": "^1.0.10",
     "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-netlify": "^2.0.6",
