--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-remark-copy-linked-files": "^2.0.9",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^2.0.6",
+    "gatsby-remark-normalize-paths": "^1.0.0",
     "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-remark-responsive-iframe": "^2.0.9",
     "gatsby-remark-smartypants": "^2.0.8",
