--- a/.forestry/front_matter/templates/project-template.yml
+++ b/.forestry/front_matter/templates/project-template.yml
@@ -5,19 +5,28 @@ fields:
 - type: text
   name: title
   label: title
+  config:
+    required: true
 - type: datetime
   name: date
   label: date
+  config:
+    required: true
 - type: file
   name: featuredImage
   label: featuredImage
-- type: list
-  name: tags
-  label: tags
-- type: list
+  config:
+    required: true
+- type: tag_list
+  label: Categories
   name: categories
-  label: categories
-- type: list
+  description: Choose the main categories of the project (Illustration, Front-End
+    Dev, etc).
+- type: tag_list
+  description: Choose some tags to describe the project.
+  label: Tags
+  name: tags
+- type: tag_list
   name: tools
   label: tools
 - type: text
@@ -26,9 +35,6 @@ fields:
 - type: text
   name: dribbble_url
   label: dribbble_url
-- type: list
-  name: colors
-  label: colors
 - type: color
   name: colour
   config:
