--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-remark-smartypants": "^2.0.8",
     "gatsby-source-behance": "^3.0.2",
     "gatsby-source-filesystem": "^2.0.20",
+    "gatsby-transformer-csv": "^2.1.21",
     "gatsby-transformer-remark": "^2.2.4",
     "gatsby-transformer-sharp": "^2.1.13",
     "prismjs": "^1.15.0",
